--- a/Triangle/Triangle.csproj
+++ b/Triangle/Triangle.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Edge.cs" />
     <Compile Include="Point.cs" />
+    <Compile Include="Polygon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Triangle.cs" />
